public interface Motivator {
    void apply(Student student);
    String getName();
}