@startuml

class Main
class ExamSimulator


class Student {
    -name : String
    -motivation : int
    -intelligence : int
    -subjects : List<Subject>
}

class Plan {
    -subjects : List<Subject>
}

class Subject {
    -name : String
    -ects : int
    -hours : int
    -difficulty : int
}
class SubjectSorter

class ExamResult {
    -grade : double
    -subject : Subject
}

class StudyEvent

class Visualizer {
    -student : Student
}

class Reader

interface Motivator {
    +apply(Student)
    +getName() : String
}

class Employment
class ScholarshipChance
class Procrastination
class CoffeeBreak
class Disease
class Lazyness
class PrzerwaNaPiwo
class BadMood
class NearHolidays

' Klasy motywatorów dziedziczą po Motivator
Motivator <|.. Employment
Motivator <|.. ScholarshipChance
Motivator <|.. Procrastination
Motivator <|.. CoffeeBreak
Motivator <|.. Disease
Motivator <|.. Lazyness
Motivator <|.. PrzerwaNaPiwo
Motivator <|.. BadMood
Motivator <|.. NearHolidays

Student "1" o-- "*" Subject
Plan "1" o-- "*" Subject
Student "1" o-- "1" Plan
Visualizer "1" o-- "1" Student
ExamResult "*" o-- "1" Subject


Main ..> ExamSimulator
ExamSimulator ..> Student
ExamSimulator ..> Plan
ExamSimulator ..> Motivator
ExamSimulator ..> Visualizer
ExamSimulator ..> ExamResult
ExamSimulator ..> StudyEvent

SubjectSorter ..> Subject



@enduml